# IMPACT-Synth-KonfAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
impact_synth_konfai/: main.py
