[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-synth-konfai"
version = "1.0.2"
description = "Fast and lightweight CLI for synthetic CT generation using IMPACT-Synth models within the KonfAI framework."
license = "Apache-2.0"
readme = "README.md"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

requires-python = ">=3.8"
dependencies = [
"konfai==1.4.0",
]

[project.urls]
Homepage = "https://github.com/vboussot/ImpactSynth"
Repository = "https://github.com/vboussot/ImpactSynth"
Issues = "https://github.com/vboussot/ImpactSynth/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"


[project.scripts]
impact-synth-konfai = "impact_synth_konfai.main:main"
